--- a/.github/workflows/gitbub-actions.yml
+++ b/.github/workflows/gitbub-actions.yml
@@ -1,1 +1,15 @@
 name: github-actions lego
+on: [push]
+jobs:
+  Check-ithub-Actions: 
+    run-on: ubuntu-latest
+    steps:
+      - run: echo "triggered by a ${{ github.event_name }} event"
+      - run: echo "running on a ${{ runner.os }} server hosted by Github"
+      - name: check out repo code
+        uses: actions/checkout@v4
+      - run: echo "the ${{ github.repository}} has been cloned"
+      - name: List files in the repo
+        run: 
+          ls ${{ github.workspace }}
+        
