--- a/.github/workflows/gitbub-actions.yml
+++ b/.github/workflows/gitbub-actions.yml
@@ -10,6 +10,6 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "the ${{ github.repository}} has been cloned"
       - name: List files in the repo
-        run: 
+        run: |
           ls ${{ github.workspace }}
         
